Refactor: улучшение архитектуры и кода
- Добавлена централизованная конфигурация (internal/config)
- Вынесено форматирование сообщений в отдельный пакет (internal/presenters)
- Создан отдельный handler для команд Telegram (internal/handlers)
- Добавлено структурированное логирование (internal/logger)
- Улучшена обработка ошибок и валидация входных данных
- Реализован Dependency Injection для всех компонентов
- Обновлены use cases для использования конфигурации

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ go.work.sum
 .env
 .env.local
 .env.*.local
+
+# Documentation files (internal notes)
+ARCHITECTURE_NOTIFICATIONS.md
+IMPROVEMENTS.md
+
+# Build artifacts
+main
