Fix: обработка metascore как int или string
- Добавлен кастомный тип Metascore с UnmarshalJSON
- Обрабатывает случаи: int 0, int > 0, string "0", string ""
- Исправлена проблема с отображением метаскора при значении 0
- Перемещены документационные файлы в docs/ (добавлено в .gitignore)

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,7 @@ go.work.sum
 .env.*.local
 
 # Documentation files (internal notes)
-ARCHITECTURE_NOTIFICATIONS.md
-IMPROVEMENTS.md
+docs/
 
 # Build artifacts
 main
