--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,14 +11,16 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Deploy to VDS
-        uses: appleboy/ssh-action@v1.0.0
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.VDS_HOST }}
           username: ${{ secrets.VDS_USERNAME }}
           key: ${{ secrets.VDS_SSH_KEY }}
+          port: 22
+          timeout: 30s
           script: |
             cd /opt/steambotgo
             git pull origin main
