--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           script: |
             cd /opt/steambotgo
             git pull origin main
-            docker-compose down
+            docker-compose down || true
             docker-compose build --no-cache
             docker-compose up -d
             docker-compose logs --tail=50 bot
