--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,5 @@ jobs:
             cd /opt/steambotgo
             git pull origin main
             docker-compose down || true
-            docker-compose build --no-cache
-            docker-compose up -d
+            docker-compose up -d --build
             docker-compose logs --tail=50 bot
