Temporarily disable PostgreSQL connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,36 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:15
-    container_name: steambotgo-postgres
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: steambotgo
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: always
+  # Временно отключен PostgreSQL
+  # postgres:
+  #   image: postgres:15
+  #   container_name: steambotgo-postgres
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: postgres
+  #     POSTGRES_DB: steambotgo
+  #   ports:
+  #     - "5432:5432"
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready -U postgres"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 5
+  #   restart: always
 
   bot:
     build: .
     container_name: steambotgo-bot
-    depends_on:
-      postgres:
-        condition: service_healthy
+    # Временно отключена зависимость от PostgreSQL
+    # depends_on:
+    #   postgres:
+    #     condition: service_healthy
     env_file:
       - .env
     environment:
-      DATABASE_URL: postgres://postgres:postgres@postgres:5432/steambotgo?sslmode=disable
+      # DATABASE_URL: postgres://postgres:postgres@postgres:5432/steambotgo?sslmode=disable
       STEAM_BASE_URL: https://store.steampowered.com
     restart: always
 
