Сделана обработка сообщений от юзера с помощью ИИ

--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,14 @@ go.work.sum
 .env
 .env.local
 .env.*.local
+.env.test
 
 # Documentation files (internal notes)
 docs/
 
 # Build artifacts
 main
+
+# Local development files
+Makefile
+docker-compose.test.yml
